--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "ngstorage": "~0.3.7"
+    "ngstorage": "~0.3.7",
+    "angularfire": "~1.1.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
