--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
 - '0.10'
+before_install:
+  - gem install sass
+  - gem install compass
 install:
 - npm install -g bower
 - bower install
