--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "checkit",
   "private": true,
   "devDependencies": {
+    "codeclimate-test-reporter": "^0.1.0",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
     "grunt-autoprefixer": "^2.0.0",
@@ -29,6 +30,7 @@
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.37",
+    "karma-coverage": "^0.4.2",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.0",
     "phantomjs": "^1.9.17",
