--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angularfire": "~1.1.2"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3.0"
+    "angular-mocks": "^1.3.0",
+    "jquery": "~2.1.4"
   },
   "appPath": "app",
   "moduleName": "checkItApp"
